--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-image: url('../Photos/spaceBackground.jpg');
+  background-image: url('Photos/spaceBackground.jpg');
   /* Image from Chil Vera */       
   background-repeat: no-repeat;
   background-size: cover;
